--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,44 +1,265 @@
 ====================
+     06-18-2015
+====================
+
+
+   * android/
+5c9c086 Update Changelog.txt
+ccfc117 Update default.xml
+f408063 No More Prebuilt RomStats
+46aa68c Update default.xml
+1b28960 add RomStats
+
+   * frameworks/base/
+db8129a Will this fix build?
+e38bd84 Fix Smart Pulldown
+3abe8e4 Fixes For Today's Commits
+25ab21a Force Expanded Notifications (1/2)
+819086c QS: Option to show four tiles per row (1/2)
+9ee426d Over scroll effects 1/2
+63de0ab Long press lock screen lock icon to sleep (1/2)
+694fb75 Double tap to sleep on navigation bar [1/2]
+6f66fa1 Double tap to sleep anywhere on the lock screen (1/2)
+796c5ee Add membar to recents options [1/2]
+5266831 Block QS on secure lockscreen [1/2]
+b40861a Return: Smart Pulldown [1/2]
+
+   * packages/apps/Settings/
+0040edf Forgot something
+94cde9e Derp
+68a2ee2 Fixes For Today's Commits
+4862e4a Force Expanded Notifications (2/2)
+e16edc1 QS: Option to show four tiles per row (2/2)
+a880c56 Long press lock screen lock icon to sleep (2/2)
+4363a05 Double tap to sleep on navigation bar [2/2]
+96f78a7 Double tap to sleep anywhere on the lock screen (2/2)
+330eaf1 Add membar to recents options [2/2]
+2421146 Block QS on secure lockscreen [2/2]
+4075827 Return: Smart Pulldown [2/2]
+e05e75b Change to reference new OwnOTACenter
+
+   * vendor/ownrom/
+9420adc Update repo name @OwnDroid
+bf22b16 vendor: add tbltexx to lunch menu
+
+====================
+     06-17-2015
+====================
+
+
+   * android/
+ea9575b OTA is OwnOTA
+
+   * packages/apps/Settings/
+dccf354 Launch Rom Stats from Settings
+
+   * vendor/ownrom/
+72c7018 OTA is OwnOTA
+dcdd200 Change some props...
+738f5a5 vendor: RomStats
+
+====================
+     06-16-2015
+====================
+
+
+   * android/
+e6b2c20 Update Changelog.txt
+
+   * frameworks/base/
+8c12121 QS Customizations [2/2]
+0d12f4c Navigation bar button color [1/2]
+32c8342 Base: replace recents clear all button with a fab button
+3d05694 Revert: SystemUI add HeadsUpp botton in status bar header (1/2)
+bfab75e Squash: HeadsUp Customizations [2/2]
+
+   * packages/apps/Settings/
+a6dc6c5 QS Customizations [1/2]
+31c4c96 Navigation bar button color [2/2]
+7b2202c Settings: replace recents clear all button with a fab button - add bottom center option
+9e7ddb3 Revert: Settings: add HeadsUp button in status bar header (2/2)
+71f1fab Squash: HeadsUp Customizations [1/2]
+
+   * vendor/ownrom/
+b16d488 Abandon all local changes while syncing
+
+====================
+     06-15-2015
+====================
+
+
+   * android/
+3babea3 update
+f28e9d7 manifest: track deskclock ourselves
+dd956bc Update default.xml
+8bcaae6 Fix derp @OwnDroid
+2b3232b manifest: track OTACenter
+
+   * frameworks/base/
+f999380 Slim Recents [2/2]
+
+   * packages/apps/OwnWallpapers/
+ee07815 Lets finish this now...
+
+   * packages/apps/Settings/
+2ae6b44 cleaning up some lines
+ab7f6ed Update own_main_settings.xml
+669aaed Move Expanded Desktop to OwnInterface Settings
+f3031e1 Merging
+364d952 Slim Recents [1/2]
+e128a5b OTACenter Thanks @Altaf-Mahdi for original https://github.com/Euphoria-OS/android_packages_apps_Settings/commit/d1e11213698759345cd732baf35fcc8f61df9fd7
+3d0658a Revert "add changelog to OwnSettings"
+
+   * vendor/ownrom/
+b5a7fbb Remove . from date in zip name Also no need of forcing the UTC date, let it be local to the builder's location
+c156238 Update common.mk
+7ccb3a2 vendor: sync deskclock
+35add0d vendor: stuff for ota
+
+====================
      06-14-2015
 ====================
 
 
    * android/
-f28e9d7 manifest: track deskclock ourselves
-dd956bc Update default.xml
-8bcaae6 Fix derp @OwnDroid
-2b3232b manifest: track OTACenter
 3a27d6c Track Cards
 
-   * device/oneplus/bacon/
-4cd228d unicornblood part 1
+   * build/
+64458ab Fix compilation
+6557636 build: OwnROM
 
-   * frameworks/base/
-f999380 Slim Recents [2/2]
+   * device/motorola/msm8226-common/
+f71be0d Automatic translation import
 
-   * kernel/mediatek/sprout/
-cc63fd7 kernel: add support for gcc 5
+   * external/whispersystems/WhisperPush/
+6fdfa64 Automatic translation import
 
-   * packages/apps/OTACenter/
-1e8c96f update URL
-6140757 Ownified Updater
+   * hardware/qcom/fm/
+c918997 Automatic translation import
+
+   * packages/apps/AudioFX/
+a002264 Automatic translation import
+
+   * packages/apps/Bluetooth/
+24d0636 Automatic translation import
+
+   * packages/apps/BluetoothExt/
+7219889 Automatic translation import
+
+   * packages/apps/CMAccount/
+993e456 Automatic translation import
+
+   * packages/apps/CMBugReport/
+4cbeab1 Automatic translation import
+
+   * packages/apps/CMFileManager/
+9cd3ae0 Automatic translation import
+
+   * packages/apps/Calculator/
+02acaf3 Automatic translation import
+
+   * packages/apps/Calendar/
+3b41700 Automatic translation import
+
+   * packages/apps/Camera2/
+55e7a32 Automatic translation import
+
+   * packages/apps/CellBroadcastReceiver/
+e594881 Automatic translation import
+
+   * packages/apps/Contacts/
+bed2845 Automatic translation import
+
+   * packages/apps/ContactsCommon/
+4a20fc4 Automatic translation import
+
+   * packages/apps/DeskClock/
+7f71c8d Revert "DeskClock: Correctly reschedule alarms on system time change"
+
+   * packages/apps/Dialer/
+f831b88 Automatic translation import
+
+   * packages/apps/Eleven/
+90f1f8f Automatic translation import
+
+   * packages/apps/Email/
+094f8e3 Automatic translation import
+
+   * packages/apps/Gallery2/
+f82af5f Automatic translation import
+
+   * packages/apps/InCallUI/
+40c053f Automatic translation import
+
+   * packages/apps/LockClock/
+3dc05d2 Automatic translation import
+
+   * packages/apps/Mms/
+4bded0c Automatic translation import
 
    * packages/apps/OwnWallpapers/
 a91900f Update icon...
 
+   * packages/apps/PhoneCommon/
+0076ca8 Automatic translation import
+
    * packages/apps/Settings/
-f3031e1 Merging
-364d952 Slim Recents [1/2]
-e128a5b OTACenter Thanks @Altaf-Mahdi for original https://github.com/Euphoria-OS/android_packages_apps_Settings/commit/d1e11213698759345cd732baf35fcc8f61df9fd7
-3d0658a Revert "add changelog to OwnSettings"
 202067c Move a few Recent Apps Screen options to OwnRecentsSettings
 7c819ea Create Recents Settings
 e31b358 Fix typo
 
+   * packages/apps/SetupWizard/
+761381f Automatic translation import
+
+   * packages/apps/SoundRecorder/
+6fc6dc6 Automatic translation import
+
+   * packages/apps/Stk/
+4f4b502 Automatic translation import
+
+   * packages/apps/Terminal/
+a7623a0 Automatic translation import
+
+   * packages/apps/ThemeChooser/
+b21b233 Automatic translation import
+
+   * packages/apps/Trebuchet/
+f418219 Automatic translation import
+
+   * packages/apps/TvSettings/
+64bc3e9 Automatic translation import
+
+   * packages/apps/UnifiedEmail/
+435ff6a Automatic translation import
+
+   * packages/providers/DownloadProvider/
+5f0bb34 Automatic translation import
+
+   * packages/providers/ThemesProvider/
+6edce49 Automatic translation import
+
+   * packages/services/Mms/
+ad83633 Automatic translation import
+
+   * packages/services/Telecomm/
+f747e94 Automatic translation import
+
+   * packages/services/Telephony/
+48ed985 Automatic translation import
+
+   * packages/wallpapers/Galaxy4/
+3eea2df Automatic translation import
+
+   * packages/wallpapers/PhaseBeam/
+c5fc571 Automatic translation import
+
+   * packages/wallpapers/PhotoPhase/
+5a93453 Automatic translation import
+
+   * vendor/cmsdk/
+6b9dbb2 Automatic translation import
+
    * vendor/ownrom/
-c156238 Update common.mk
-7ccb3a2 vendor: sync deskclock
-35add0d vendor: stuff for ota
 e830b51 Track Cards
 b630985 Version 0.4
 
@@ -47,35 +268,48 @@ b630985 Version 0.4
 ====================
 
 
-   * build/
-64458ab Fix compilation
-6557636 build: OwnROM
+   * device/google/sprout8/
+54a4cc9 Revert "Add stuff for ambient display"
+40a3de8 Add stuff for ambient display Signed-off-by: Akhil Narang <akhilnarang.1999@gmail.com>
 
-   * device/google/sprout-common/
-fc8f347 Revert "sprout-common: Build OwnKernel"
-6f185fb Merge remote-tracking branch 'origin/cm-12.1' into HEAD
-108d31f sprout-common : improve performance profiles
-7d329be sprout-common : fix video decoder denials
-0e9db87 sprout-common: Build OwnKernel
+   * frameworks/opt/telephony/
+993931d Telephony: DDS switch oemhook message sent twice
+76bcb1b Fix duplicate events received in DcTracker.
+d41cf16 Check for DDS validity
+7c8b934 Reject network request when DDS is invalid
+b9b9458 Telephony: On demand DDS switch uses preferred sub
+b760973 Ignore DdsRequest for non DDS network factory
+d9097e7 Fix DDS switch issue from GSM to CDMA.
+ba13040 Fix issue that DDS can not get back to primary sub and network mode shows incorrect in settings.
 
-   * device/google/sprout4/
-9de6b0d Revert "Add stuff for ambient display"
-678ec40 Add stuff for ambient display Signed-off-by: Akhil Narang <akhilnarang.1999@gmail.com>
+   * hardware/qcom/audio-caf/msm8960/
+2be3615 audio: Convert libaudioamp to audio_amplifier HAL
 
-   * kernel/mediatek/sprout/
-1eacdc9 config : enable ondemand, set interactive as default
-e26456d mediatek: cpufreq: add more governor checks
+   * hardware/qcom/audio-caf/msm8974/
+67221b2 hal: Convert libaudioamp to audio_amplifier HAL
 
-   * packages/apps/DeskClock/
-7f71c8d Revert "DeskClock: Correctly reschedule alarms on system time change"
+   * hardware/qcom/audio-caf/msm8994/
+c1d292b hal: Convert libaudioamp to audio_amplifier HAL
+
+   * hardware/qcom/fm/
+c639dcb FM: fix mRadioTextScroller usage in transmitter activity
+
+   * kernel/motorola/msm8226/
+53c801a stk3x1x LightSensor: Fix brightness adjust
+
+   * packages/apps/CMFileManager/
+215e746 Properly validate fields when resetting password
+
+   * packages/apps/SetupWizard/
+b7c5182 SetupWizard: Ensure setup complete flags are set for secondary users
+
+   * packages/apps/Trebuchet/
+80dea15 Trebuchet: Fix bug with removing items from folders
 
 ====================
      06-12-2015
 ====================
 
-
-   * device/google/sprout-common/
-4566527 sprout-common : fix video decoder denials
 
    * frameworks/opt/cards/
 0e1de8b fix card header title vertical centering
@@ -97,18 +331,72 @@ edafe01 use api21 in android.mk
 1074d96 rename paths
 5872d6a Update cards lib
 
+   * hardware/libhardware/
+55d4e44 audio: Add audio amplifier HAL
+
+   * packages/apps/CMFileManager/
+039ec12 onResume: Refresh current view
+912b05e Sizes: Let disk usage show sizes as doubles
+c91b03d MediaScanning: Update with calls to Mediascanner
+5911442 Delete destination file when copy fails
+
+   * packages/apps/Calculator/
+37e5244 Floating Calculator: Reposition to fit landscape devices
+
+   * packages/apps/Trebuchet/
+2a6fcc0 trebuchet: Externalize backup API key string
+7d00658 Rotation: fix icons disappearing
+
 ====================
      06-11-2015
 ====================
 
 
-   * device/google/sprout-common/
-057067b sprout-common : fix cm dependencies syntax
-2954022 Ownified
+   * device/google/sprout8/
+8de3370 Ownifying
+ca8b4e2 sprout8 : use nested dependencies
+b9d39ab sprout8 : add context for oem partition
+25bda03 sprout8 : fix fstab
+b0ce1aa sprout8 : reduce min brightness and fix restricted mobile access
+9970fd4 sprout8: init fixes for emulated storage
 
-   * device/google/sprout4/
-19f2d78 Update
-15c65db Merge remote-tracking branch 'cm/cm-12.1' into HEAD
+   * device/motorola/msm8226-common/
+1c65486 msm8226-common: Adjust min-free value for lowmemorykiller
+be4b909 Revert "Revert "msm8226-common: Adjust min-free value for lowmemorykiller""
+
+   * frameworks/base/
+87cdd4d Merging
+2d5e173 Revert Slims IME AUTO Rotate option For Now
+34510fb base: fix double sync tile option shown
+14f8d2f Merge
+616689c Derp
+
+   * packages/apps/Contacts/
+ff213cd Keep a local instance of mContactData when copying to SIM card.
+
+   * packages/apps/Email/
+ebf12f6 Use an inexact timer for the IDLE refresh.
+9a652f8 Don't throw a NPE when operating on a destroyed list.
+c0df55c Fix some more argument order issues.
+e7c9a85 Simplify logic.
+c9a9148 Fix some typos.
+f901689 Don't solely rely on the presence of RECENT for checking for new mail.
+381a2c2 Don't re-sync when refreshing the IDLE connection.
+6a98534 Fix crash when attempting to view EML files.
+
+   * packages/apps/Settings/
+1dc8e21 Revert Slims IME AUTO Rotate option For Now
+e5c088e Finally fix the listview shortcuts images
+dcde70a Fixes
+
+   * packages/services/Telephony/
+986ce14 Fix phone not initialized exception
+
+   * system/core/
+e3465bf audio: fix incall music ifdefs (1/3)
+
+   * vendor/cmsdk/
+9567e3e cmsdk: fix customtile listener service registering logic
 
 ====================
      06-10-2015
@@ -117,6 +405,11 @@ edafe01 use api21 in android.mk
 
    * android/
 dc756db we dont need this anymore
+b7ee6a1 Update Changelog.txt
+5a94a4a Update Changelog.txt
+b4e3a29 Track our own AV
+11d9da0 get floating action Button from Bliss
+3cf4307 Add Kernel Adiutor [2/2]
 
    * bionic/
 5d3e5c8 Merge CM
@@ -126,30 +419,14 @@ dc756db we dont need this anymore
 bd25f9e build/core: Inherit vendor/* makefiles for check-api.
 33ccaab Allow dopush to load binaries onto the "wrong" device
 
-   * device/google/sprout-common/
-72c21f8 sprout-common : fix system_server denials
-
-   * device/google/sprout4/
-ba61a76 sprout4 : add context to oem partition
-ce253eb sprout4 : use nested dependencies
-822e7e2 sprout4 : reduce min brightness and fix restricted mobile access messages
-
-   * device/oppo/common/
-c196804 releasetools: Don't include unchanged firmware in incrementals
-2bc3b6f Automatic translation import
-
    * external/whispersystems/WhisperPush/
 b210b15 Automatic translation import
 
    * frameworks/av/
 b3e7eb1 Merge CM
+122e9db Forward Port: Add Camera sound toggle [3/3]
 
    * frameworks/base/
-87cdd4d Merging
-2d5e173 Revert Slims IME AUTO Rotate option For Now
-34510fb base: fix double sync tile option shown
-14f8d2f Merge
-616689c Derp
 1e8dd15 Add back TRDS Tile now 1/2
 11c3d4b Merge CM
 8b35a49 Add a method to query the voicemail number.
@@ -162,6 +439,11 @@ ebe3b5c Revert "SystemUI: Fix no LED indication for missed call when screen off"
 ecb46f7 services: button brightness should check proximity
 8e037a5 Automatic translation import
 83617eb Don't set mHomeConsumed to true for KEY_ACTION_SLEEP
+72f83b3 Fixes for todays commits
+cc96c38 Custom System Animations [2/2]
+c25511e Forward Port: Add Camera sound toggle [1/3]
+da7998f [Base]: recents panel clear all button tweaks
+7a52556 Merging Wakelock
 
    * frameworks/opt/telephony/
 2043011 Fix the build
@@ -170,13 +452,11 @@ efddb3b msim: order getSubInfo list by slot ID
 b7c44b3 MSIM: Change default fallback subId value
 303c9cd Fix ACTION_DEFAULT_SUBSCRIPTION_CHANGED is not sent after power on
 
-   * kernel/mediatek/sprout/
-3b3cea4 mediatek: hotplug: improve current governor checks
+   * hardware/qcom/audio-caf/msm8916/
+c727b4f hal: Correctly set backend to best available parameters
 
-   * kernel/oneplus/msm8974/
-332f86d neigh: Better handling of transition to NUD_PROBE state
-979555e New Build Breakage in branch: kernel-m-dev-tegra-flounder-3.10 @ 1960706
-4f800a6 net/unix: sk_socket can disappear when state is unlocked
+   * hardware/qcom/fm/
+74bbf9e Automatic translation import
 
    * packages/apps/AudioFX/
 abd4582 Automatic translation import
@@ -253,14 +533,19 @@ eaf701c Automatic translation import
 803bbb1 Automatic translation import
 
    * packages/apps/Settings/
-1dc8e21 Revert Slims IME AUTO Rotate option For Now
-e5c088e Finally fix the listview shortcuts images
-dcde70a Fixes
 fca83fe Add TRDS Tile
 c4c1018 Merge CM
 f471850 Use framework name and icon for system UID.
 1524dc3 Automatic translation import
 877bfe2 This is OwnROM!
+85257d6 Revert "Move Notification Settings to OwnSettings"
+f94368e Fixes for today's commits
+22d32fa Custom System Animations [1/2]
+a790688 Move Live Volume Steps to OwnSoundSettings
+6009ae8 Add an entry for KernelAdiutor
+e8d40a4 Forward Port: Add Camera sound toggle [2-3]
+2594b97 [Settings]: recents panel clear all button tweaks
+1454534 Mergin WakeLock
 
    * packages/apps/SetupWizard/
 82bbed9 Automatic translation import
@@ -279,11 +564,13 @@ e45f639 Automatic translation import
 
    * packages/apps/Trebuchet/
 d321030 Automatic translation import
+12103ba Stop unnecessary exception posting to logcat.
 
    * packages/apps/TvSettings/
 6dfe00f Automatic translation import
 
    * packages/apps/UnifiedEmail/
+946b1e4 Remove obsolete theme.
 787e618 Automatic translation import
 
    * packages/providers/ThemesProvider/
@@ -294,7 +581,6 @@ ad91e86 Merge "Allow system apps to query the voicemail number." into cm-12.1
 353f49f Automatic translation import
 
    * packages/services/Telephony/
-986ce14 Fix phone not initialized exception
 4993c78 Style non-interactive dialog in the same way as interactive one.
 216aad0 Automatic translation import
 
@@ -307,6 +593,10 @@ f58b595 cmsdk: do not crash system if CustomTileListenerService isn't present
 3f7e428 CMSDK: Update current and system api texts.
 853240e Automatic translation import
 
+   * vendor/motorola/
+9a491dd Merge pull request #166 from razrqcom-dev-team/cm-12.1-quark
+6d213c0 quark: Update to LXG22.33-12.16
+
    * vendor/ownrom/
 7eac5f5 Fix for backuptool.sh
 64a4915 Merge local changes
@@ -314,6 +604,9 @@ f58b595 cmsdk: do not crash system if CustomTileListenerService isn't present
 de2e1e1 apn: Add China Telecomm 4G APN support
 a99375d Move LatinIME to phone/tablet configs
 ff9b16d Merge CM
+e027470 Track our own AV
+4041298 Add Kernel Adiutor [1/2]
+dd06d8c vendor: Squash fixes
 
 ====================
      06-09-2015
@@ -321,55 +614,25 @@ ff9b16d Merge CM
 
 
    * android/
-b7ee6a1 Update Changelog.txt
-5a94a4a Update Changelog.txt
-b4e3a29 Track our own AV
-11d9da0 get floating action Button from Bliss
-3cf4307 Add Kernel Adiutor [2/2]
 4e4728a Update changelog
 
-   * device/oneplus/bacon/
-e982da1 Update ownrom.dependencies
-37425d5 Revert ":D" Build with stock cm kernel, not OwnKernel till its fixed This reverts commit 9ed4fb3b4118a18560f1fe5815414e93ccaaecce.
-
-   * device/oppo/msm8974-common/
-483de75 msm8974-common: Add OWN optimizations Compile kernel with GCC 5.1
-
-   * frameworks/av/
-122e9db Forward Port: Add Camera sound toggle [3/3]
-
    * frameworks/base/
-72f83b3 Fixes for todays commits
-cc96c38 Custom System Animations [2/2]
-c25511e Forward Port: Add Camera sound toggle [1/3]
-da7998f [Base]: recents panel clear all button tweaks
-7a52556 Merging Wakelock
 1ca811a Wakelock Blocker [1/2] Thanks to @maxwen for original commit https://github.com/ResurrectionRemix/android_frameworks_base/commit/d4e8a6078b094fb6d8013033ce08cc7de7943356
 52665eb fb: add back all keyboard IME features back (1/2)
 c86ae59 [base] long press back to kill configurable timeout (1/2)
 a70bb2d frameworks: display: shorten automatic brightness debounce
 786b496 SystemUI: Expose weather text colors
 eea8576 SystemUi: Support expanded styles for custom tiles.
+a2c5866 FW Base : add listview animations
 
-   * hardware/qcom/audio-caf/msm8916/
-c727b4f hal: Correctly set backend to best available parameters
-
-   * kernel/mediatek/sprout/
-359f0f2 sprout : back to enforcing
-8f87e2e mediatek : fix kernel panic on non-hotplug governors
+   * hardware/qcom/audio-caf/msm8960/
+8f8cd4e audio: Make audio device accessible to HAL functions
 
    * packages/apps/Email/
 32419c5 email: catch the correct exception while closing the buffers
+681988f Fix ArrayIndexOutOfBoundsException.
 
    * packages/apps/Settings/
-85257d6 Revert "Move Notification Settings to OwnSettings"
-f94368e Fixes for today's commits
-22d32fa Custom System Animations [1/2]
-a790688 Move Live Volume Steps to OwnSoundSettings
-6009ae8 Add an entry for KernelAdiutor
-e8d40a4 Forward Port: Add Camera sound toggle [2-3]
-2594b97 [Settings]: recents panel clear all button tweaks
-1454534 Mergin WakeLock
 bea716d Update Dutch (NL) Strings for WakelockBlocker
 d524c57 WakeLock: Layout Improvements (See image below)
 45e37ae Wakelock Blocker [2/2]
@@ -377,20 +640,18 @@ c600e25 Settings: add development animation transition mode 0.75 and 0.25
 0e0e2e5 Move Notification Settings to OwnSettings
 127036b settings: add back all keyboard IME features back (2/2) this commit adds:
 a68bd45 [settings] long press back to kill configurable timeout (2/2)
+e44a154 Move Clock Widget Settings to Extra Settings
+0286e4d Create Empty OwnExtraSettings
+689d847 Move Notificaiton Drawer Settings to Own Interface Settings
+d70ab17 Settings : add listview animations
 
    * packages/apps/Trebuchet/
-12103ba Stop unnecessary exception posting to logcat.
 31d1211 RTL: fix app drawer layout
 
    * vendor/cmsdk/
 5024f16 CMSDK: Utilize a SparseArray instead of Map, avoid autoboxing.
 757d564 CMSDK: Update for versioning tests.
 e08be73 CMSDK: Create versioning for platform SDK.
-
-   * vendor/ownrom/
-e027470 Track our own AV
-4041298 Add Kernel Adiutor [1/2]
-dd06d8c vendor: Squash fixes
 
 ====================
      06-08-2015
@@ -400,29 +661,20 @@ dd06d8c vendor: Squash fixes
    * android/
 e929db3 update
 f16364e Update default.xml
-
-   * device/oneplus/bacon/
-9ed4fb3 :D
+ff2d9e0 Update Changelog.txt
 
    * frameworks/base/
-a2c5866 FW Base : add listview animations
 35103d1 Update Dutch (NL) Strings for SyncTle
 2397b12 QS: add Sync tile (1/2)
+721003c Squash: Task Manager [1/2]
 
    * hardware/broadcom/libbt/
 962fb7b libbt-vendor: add support for samsung bluetooth
-
-   * packages/apps/Email/
-681988f Fix ArrayIndexOutOfBoundsException.
 
    * packages/apps/OwnWallpapers/
 221fc3f Some renaming....
 
    * packages/apps/Settings/
-e44a154 Move Clock Widget Settings to Extra Settings
-0286e4d Create Empty OwnExtraSettings
-689d847 Move Notificaiton Drawer Settings to Own Interface Settings
-d70ab17 Settings : add listview animations
 fe216c7 Trying to fix icons not showing on listview in LockScreen Shortcuts
 15e0a6f Improve color picker:
 50f3cb1 fix Lockscreen Icons Not showing
@@ -436,8 +688,11 @@ d48a9ed Add wallpapers to the build.......
 
 
    * android/
-ff2d9e0 Update Changelog.txt
 76fc65c Update Changelog.txt
+
+   * device/motorola/msm8226-common/
+49c97f6 msm8226-common: Update firmware symlinks for Lollipop modem
+2a27122 msm8226-common: Set correct acdb_id and path for speakerphone mic
 
    * device/qcom/sepolicy/
 e8034d4 sepolicy:Allow mm-qcamerad to access sensormanager service access.
@@ -446,10 +701,12 @@ e8034d4 sepolicy:Allow mm-qcamerad to access sensormanager service access.
 7ac4475 mitigate logjam (CVE-2015-4000)
 
    * frameworks/base/
-721003c Squash: Task Manager [1/2]
 bf113ea Local Sync
 c70cfd7 PIE Fixes
 227e7b6 PowerManagerService: Fix updating of mUserActivitySummary
+b06549f thin font for keyguard clock
+4d6bb01 add more style to keyguard
+58063ba Revert "Revert "SystemServer: Skip TorchService construction if no flash feature detected"" Stupid thing fixed SystemUI FCs for sprout, but broke camera AND torch for bacon This reverts commit 300cd46014189ca5013d24b6f903b7e2f1d37c8e.
 
    * frameworks/opt/cards/
 e17029f Remove TRDS resources to fix build
@@ -462,13 +719,11 @@ e17029f Remove TRDS resources to fix build
 1c258a6 Update Dutch (NL) Strings
 2a65bd3 PIE Fixes
 
-   * vendor/oppo/
-9fa7246 Merge pull request #17 from maniac103/sensor-update
-
    * vendor/ownrom/
 487cb34 Some fixes.......
 cd1a67b Wtf :O
 63ee66a Show device too, otherwise all zips have same name lol @ a logic place
+3e9f17f Show device too, otherwise all zips have same name lol
 
 ====================
      06-06-2015
@@ -477,27 +732,7 @@ cd1a67b Wtf :O
 
    * android/
 449f193 Update Changelog.txt
-
-   * device/google/sprout-common/
-cbc0ed8 sprout-common : update supplicant for LP
-36e17cc sprout-common : trim down dependencies
-8a2804e sprout-common : add FM radio dependencies
-fa930d2 sprout-common : bring in cm dependencies
-f5e5ebe sprout-common : fix camera permissions
-9de5cad sprout-common : disable memcpy optimizations
-d38dfb2 sprout-common : fix compilation of wifi lib for LP
-1f81970 sprout-common : bring back wifi supplicant lib
-27ec7e3 sprout-common : fix more denials..again
-dbe36b9 sprout-common : new set of sepolicy denial fixes
-f40bf06 sprout-common : don't overwrite files
-7210d44 sprout : address more denials
-e0d572b Revert "Revert "sprout-common : bring back custom audiopolicymanager""
-7de36f8 sprout-common : build charger and other misc packages
-a479b68 sprout-common : use context for oemfs
-30d3e36 sprout-common : more sepolicy rules
-2eed4db sprout-common: initial sepolicy
-26db815 sprout-common : bring back 3G switch mechanism
-58b78ff Revert "sprout-common : bring back custom audiopolicymanager"
+d30c448 Update Changelog
 
    * external/whispersystems/TextSecure/
 01e6af5 TextSecure: Deprecate old curve25519.
@@ -509,9 +744,6 @@ aea39b2 curve25519: Make sure we're building the libcurve JNI.
 9cc1c24 audiopolicy: Fix call recording for legacy qcom HAL (again)
 
    * frameworks/base/
-b06549f thin font for keyguard clock
-4d6bb01 add more style to keyguard
-58063ba Revert "Revert "SystemServer: Skip TorchService construction if no flash feature detected"" Stupid thing fixed SystemUI FCs for sprout, but broke camera AND torch for bacon This reverts commit 300cd46014189ca5013d24b6f903b7e2f1d37c8e.
 89a35b4 [Base] Sync PIE codes with SlimRoms team Thanks to @ezio84 -> SlimRoms commit: SlimRoms/frameworks_base@bbf6f17
 bb53f32 Density scaling: scale compatibility apps, wm command support
 449590b Revert "Revert "Allow custom density setting""
@@ -519,12 +751,19 @@ bb53f32 Density scaling: scale compatibility apps, wm command support
 5e61062 SlimSeekBarPrefernce
 3c0fc7c PieItem.java Error Fix (For SlimPIE)
 899ff8b IStatusbarService.aidl Error Fix (For SlimPIE)
+a9ef9a6 Squash Slim Pie [2/2]
+b91f0b1 Update my local enviorment
+cac564a Fix long click on notification tile
 
    * hardware/qcom/audio-caf/msm8994/
 d6bcc4d hal: Support the audio amplifier hook
 
    * packages/apps/Dialer/
 02a8e10 Improve SmartDialer
+
+   * packages/apps/OwnWallpapers/
+6f2a6b2 Translated app name.................
+a3f5c3a Ownify slightly more
 
    * packages/apps/Settings/
 ae9041a [Settings] Sync PIE codes with SlimRoms team Thanks to @ezio84 -> SlimRoms commit: SlimRoms/packages_apps_Settings@1aa3d33
@@ -539,8 +778,11 @@ b059cfd Squash Slim Pie [1/2]
    * packages/services/Telecomm/
 2d77a33 Allow system apps to query the voicemail number.
 
+   * vendor/motorola/
+925751d Merge pull request #165 from crpalmer/gps
+ce54f08 victara: Import CAF's GPS HAL and remove the corresponding blobs
+
    * vendor/ownrom/
-3e9f17f Show device too, otherwise all zips have same name lol
 6932256 Update common.mk
 
 ====================
@@ -548,18 +790,7 @@ b059cfd Squash Slim Pie [1/2]
 ====================
 
 
-   * android/
-d30c448 Update Changelog
-
-   * device/oneplus/bacon/
-a90f86b Last one...
-b9cad4b Fix derp :v
-fab0c70 Ownified device tree
-
    * frameworks/base/
-a9ef9a6 Squash Slim Pie [2/2]
-b91f0b1 Update my local enviorment
-cac564a Fix long click on notification tile
 d7493d3 Drop protection level of certain SMS-related system permissions
 1fe36a5 Code Cleanup: No longer required as AOSP commit supersedes this
 17ca5ac SystemUI: use smaller padding for battery
@@ -570,12 +801,11 @@ f1d2b82 Telephony: Actually abort flex mapping if subs are null.
    * packages/apps/Contacts/
 2751aca Contacts:remove memory status from overflow in search mode
 
+   * packages/apps/Dialer/
+2d42fc2 Dialer: Enable Call Recording for France
+
    * packages/apps/Mms/
 152607b Compose Message: Fix visual glitch.
-
-   * packages/apps/OwnWallpapers/
-6f2a6b2 Translated app name.................
-a3f5c3a Ownify slightly more
 
    * packages/apps/Settings/
 716f8a8 Settings: Fix there is no sounds and delays 1s when pressing "Touch sounds" sometimes
@@ -597,251 +827,4 @@ e25ab7b Move icons to fit within Dynamic grid upon resize.
 ee4e8f9 CMSDK: Update samples for expanded styles.
 eac6272 CMSDK: Create support for ExpandedStyles in CustomTiles.
 2c6734a CMSDK: Actually hide ThemeVersion.
-
-====================
-     06-04-2015
-====================
-
-
-   * android/
-2afd505 Update default.xml
-
-   * art/
-9514788 Allow skipping of dalvik cache pruning if boot marker is in place.
-
-   * external/dhcpcd/
-3ad41a3 dhcpcd: Send proper DUID
-
-   * frameworks/base/
-1a71417 Make the icon visible
-fe342dc VolumePanel: volume bar disorderly jump when drag it.
-0b35c08 fixes
-9a8676d Fix
-6ee5dbd NavBar tile [1/2]
-847f98b Navbar Tweaks [2/2]
-4e90c4a Power menu into navring targets
-fdcb57b Power menu QS tile [2/2]
-afd3915 NotificationTile: Simple mode ring/vibrate/priority/silent
-9bed829 Add double tap option to lockscreen shortcuts
-
-   * kernel/oneplus/msm8974/
-5ae7605 synaptics: Fix find7 compilation
-
-   * packages/apps/Calculator/
-054a57b Calculator: Fix issue with overflowing text
-
-   * packages/apps/Dialer/
-2d42fc2 Dialer: Enable Call Recording for France
-d7e581a Enable Call Recording for the United Kingdom
-
-   * packages/apps/Email/
-b80c3bd email: fix NPE
-
-   * packages/apps/OwnWallpapers/
-5a9fc30 Update strings.xml
-
-   * packages/apps/Settings/
-9849f6f Fix up increasing ring tone volume preview behaviour.
-fcbf591 Fix this
-1d81754 Settings: remove mobile networks menu if ro.radio.noril is set
-51a9e54 We are OwnROM
-4c7d5e7 NavBar tile [2/2]
-154c66e Navbar Tweaks [1/2]
-dbc640a Power menu QS tile [1/2]
-80383a7 Notification Tile [1/2]
-95822ab Add double tap option to lockscreen shortcuts
-
-   * vendor/ownrom/
-66d4a2f Update common.mk
-fb0c1eb Causes errors, don't build it now
-
-====================
-     06-03-2015
-====================
-
-
-   * android/
-0f04df7 Merge branch 'cm-12.1' of https://github.com/OwnROM/android into cm-12.1
-0257bd0 Track our wallpaper repo Remove TextSecure
-0e17004 Update Changelog.txt
-40dfe3d Track our own Development
-08d5465 Track our own Native
-c090c43 Update Changelog.txt
-
-   * development/
-dcf1f15 development: TRDS 5.0 (3/4)
-
-   * device/oppo/common/
-41be370 KeyHandler: never dexopt it
-
-   * frameworks/base/
-8559194 MultiSelectListPreference.java should deal with onRestoreInstanceState method
-8132a7e Update trds colors
-0d51482 fb: TRDS 5.0 (1/4)
-cb68c22 policy: don't allow app switch/recents key to be pressed on lockscreen
-227c2ed SystemUI: don't display protected lockscreen shortcuts
-b3253fa Base : Add more lockscreen shortcut custom icons Part2 Signed-off-by: westcrip <korukaltan@gmail.com>
-55a45db Base:Add new 73 hd lockscreen shortcus icons
-b90d213 Resize shortcut icons
-a2f8ae75 Fix
-4b625d2 Base: add more drawables to Slim LockScreen Shortcuts (2/2)
-5d93ed8 Observer DEV_FORCE_SHOW_NAVBAR in LockTaskNotify
-ebb780d Add Slims DSLV & Missing Shortcut Icons
-
-   * frameworks/native/
-26097c0 native: TRDS 5.0 (2/4)
-
-   * packages/apps/Camera2/
-a1cdd29 Fix storage location NPE
-
-   * packages/apps/Dialer/
-b675a6a Remove some dead code.
-22335cd [2/2] Dialer: SmartMute
-c9b91d0 Dialer: Ensure device ids not null
-
-   * packages/apps/InCallUI/
-faf5a34 [1/2] InCallUI: SmartMute
-
-   * packages/apps/OwnWallpapers/
-90851d8 Partial Ownify Need to update app name in all languages
-
-   * packages/apps/Settings/
-57d0245 add clock widget settings
-3299edf Update OwnSettings overall
-8e9ec59 Add missing strings...
-a903e9a Settings: TRDS 5.0 (4/4)
-855b47b Settings : Add more lockscreen shortcut custom icons Part2
-649f6dc Fix shortcut icons tint colors and list view NPE
-be100a5 Settings :Add new 73 hd lockscreen shortcus icons - Rounded colorful 73 populer media and social application icons - Removed tint color from icon listview so makes icons visible
-b336a3e Settings: add more drawables to Slim LockScreen Shortcuts (1/2) Chrome Github Paypal Youtube Whatsapp Messenger Office Suite Tapatalk
-a37c9de the status of brightness not refresh in power control widget after manual adjustment of brightnes
-fd9ce1c Settings: Fix preferred install location dialog will dismiss after rotating screen
-9eb8055 Lockscreen Shortcuts Fixes
-75bc4ab Profiles: Get Default profile with its UUID instead of name
-
-   * packages/apps/Trebuchet/
-5643b7f Trebuchet: send metrics values as strings
-
-   * packages/services/Telephony/
-05600e6 TeleService: pass sub ID to APN setting
-
-   * vendor/ownrom/
-fc0692e y u do this @OwnDroid
-b865e1f New wallpapers app
-9a612df Sync the new repos too
-
-====================
-     06-02-2015
-====================
-
-
-   * android/
-036249f Remove external/srec
-b10d24b fix
-38cef2b Time for users to abort if they just want dependencies lol
-a2b25d8 @OwnDroid
-
-   * bionic/
-8b8e5d3 libc : memcpy : allow to disable opt for some targets
-
-   * build/
-0cb5893 envsetup: cleanup the full list
-58ccf1f lunch: sort the choices
-7a557e1 build: avoid recovery patch if device setup can't do it correctly
-ffa2316 envsetup: add mk_timer
-d8f3f77 Like this better this way...
-
-   * device/qcom/sepolicy/
-2d2760e sepolicy: Update BCL sysfs nodes in file context
-
-   * external/bluetooth/bluedroid/
-f212f43 bluetooth: a2dp: Property account pcm.counter
-8523b6a bluetooth: a2dp: Allow 2 full tick's worth of data to be sent
-
-   * frameworks/base/
-963df3a Initial slim lockscreen shortcuts [2/2]
-5d071a5 Frameworks: Add several Slim helper classes and constants back
-c99e2a4 Some Updates
-5313fcb FW_Base - Live Volume Steps [1/2] -Volume steps changes are instant, no need to reboot!
-839562d Another Update
-b68785d Update Repo
-aab323e VolumePanel: better handling of updating sliders in expanded view
-faa430b VolumePanel: show hint for unlinked notification slider too
-5e7a8b2 Updating Sources
-
-   * frameworks/native/
-9f76295 Add dalvik heap override for xxxhdpi phone
-404f4eb Add HWUI overrides for xxxhdpi phone
-
-   * kernel/oneplus/msm8974/
-3042c60 synaptics: Use per-panel firmware loading
-cb89007 Revert "synaptics: Update firmware to 14001227"
-
-   * packages/apps/Gallery2/
-97739e1 Gallery2: Fix crash when Bluetooth service is disabled
-
-   * packages/apps/Settings/
-d473aa6 Settings : Initial slim lockscreen shortcuts [1/2]
-2ee2188 Settings - Live Volume Steps [2/2]
-8cbf398 Update Repo
-60a3f39 Settings: Fix setting app install location as "Removable SD card" without SD card inserted
-b96e5f5 Update Repo
-
-   * vendor/cmsdk/
-273f2db CMSDK: Add check-api generated texts.
-62c951e CMSDK: Setup initial check-api mechanism.
-25410f2 Introduce Theme Versioning [2/2]
-
-   * vendor/google/
-0e59948 sprout : update blobs for 5.1.1
-
-   * vendor/oppo/
-975ee02 msm8974-common: Update rmt_storage
-
-   * vendor/ownrom/
-cff2e2a Update build-ownrom.sh
-dad108e Temp fix for Bouygues telecom issues
-b5b6e0b FOTA: Create /cache/recovery in init.rc for FOTA
-
-====================
-     06-01-2015
-====================
-
-
-   * device/oppo/msm8974-common/
-741385d msm8974: Update WiFi configuration
-
-   * external/bluetooth/bluedroid/
-92362be bluetooth: a2dp: Buffer sufficient data to keep devices happy
-
-   * frameworks/base/
-ecda406 Introduce Theme Versioning [1/2]
-1c16b02 frameworks/base: enable localization of Chinese operator's PLMN
-89e7035 Sync status bar signal cluster code with AOSP.
-a44d9bc fingerprint: register correct function for nativeEnrollCancel
-0e16053 fingerprint: detach java vm in HAL callback
-
-   * packages/apps/InCallUI/
-9cd8afb Fix: The EndCallButton overlaps the digital key 0 after switch system language during an active call
-
-   * packages/apps/Mms/
-5db195d Add UAProf URL to carrier-specific configs
-f8cb438 Create the contact photo manager as service.
-
-   * packages/apps/Settings/
-e8f736c Integrate mobile network settings into SIM settings for MSIM.
-9563800 Remove 'Show empty SIMs' option.
-b7fcb26 Settings: fix an issue where text is not showing up on first instance.
-6f96f2e Cleanup SMS limits
-
-   * packages/apps/Trebuchet/
-d482eb7 Fix power save mode broken ui/animations
-
-   * packages/services/Telecomm/
-fcaa59c Merge "Show multi-line notification if there's more than 1 missed call." into cm-12.1
-
-   * packages/services/Telephony/
-109a0bf Telephony: Bye bye Holo USSD dialog
-c84a7ba Restyle USSD AlertDialog.
-7c15f71 Update activity title if called in MSIM case.
 
